--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,17 @@
 /*    --foreground: #ededed;*/
 /*  }*/
 /*}*/
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 html,
 body {
   max-width: 100vw;
